# mygeopy

./: .gitignore  README.md  pyproject.toml
.github/worflows/: runtest.yml
.github/workflows/: runtest.yml
tests/: test_triangle.py
